# reefcraft

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  pyproject.toml  reefcraft.code-workspace  requirements.txt  vcpkg.json
.github/workflows/: ci.yml
app/: main.py  simulation.py  system_utils.py
app/gui/: main_window.py  tank.py
app/platform/: window_style.py
app/resources/fonts/: README.txt
app/sim/: __init__.py  compute_lbm.py  engine.py  llabres_growth.py  mesh_seed.py  sim.py  timer.py  water.py  xlb_play.py
app/utils/: settings.py  window_style.py
bindings/: CMakeLists.txt  reefcraft_py.cpp
core/: CMakeLists.txt
core/include/reefcraft/: reefcraft.hpp
core/src/: reefcraft.cpp
docs/: RELEASES.md
reefcraft/: __init__.py
src/imgui_bundle/: __init__.py
src/reefcraft/: __init__.py  __main__.py
src/reefcraft/app/: __init__.py  reefcraft_app.py  settings_panel.py
src/reefcraft/gui/: __init__.py  canvas.py  main_window.py  panel.py  window.py
src/reefcraft/gui/imgui_utils/: imgui_backend.py  imgui_renderer.py
src/reefcraft/render/: __init__.py  context.py  renderer.py  scene.py
src/reefcraft/resources/stl/: coral.stl
src/reefcraft/sim/: __init__.py  compute_lbm.py  context.py  coral_growth_model.py  engine.py  growth_model.py  growth_model_factory.py  llabres.py  reef_space.py  sim_context.py  simple_porag.py  state.py  timer.py  true_llabres.py  volume.py  water.py
src/reefcraft/ui/: __init__.py  button.py  control.py  dropdown.py  icon.py  icon_button.py  label.py  layout.py  list.py  palette.py  panel.py  reef.py  section.py  slider.py  theme.py  ui_context.py  water.py  widget.py  window.py
src/reefcraft/ui/views/: coral_section.py  engine_section.py  palette.py  panel.py
src/reefcraft/utils/: __init__.py  logger.py  paths.py  settings.py  window_style.py
src/reefcraft/views/: __init__.py  button.py  panel.py  reef.py  ui.py  water.py  window.py
src/render/: context.py
tests/cxx/: CMakeLists.txt  test_core.cpp
tests/python/: test_a_volume_taichi.py  test_button.py  test_gui.py  test_layout.py  test_lbm.py  test_reefcraft.py  test_render_data.py  test_simple_p.py  test_volume.py
