# Main project configuration and settings.
#
# The pyproject.toml is the recommended consolidated project-level configuration
# file. It replaces the older requirements.txt as well as many smaller files
# previously cluttering the root directory.

[project]
name = "reefcraft"
version = "0.1"
description = "Photorealistic Coral Simulations with Physically Based Accuracy"
readme = "README.md"
requires-python = ">=3.11, <3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "attrs>=25.3.0",
  "cattrs>=24.1.3",
  "click>=8.1.8",
  "loguru>=0.7.3",
  "pip>=25.0.1",
  "pre-commit>=3.5.0",
  "pyproject-fmt>=2.2.4",
  "pytest>=8.3.5",
  "pytest-cov>=6.2.1", # Coverage tracking for pytest
  "rich>=14.0.0",
  "ruff>=0.11.6",
  "dearpygui>=2.0.0",
  "taichi>=1.7.3",
  "wheel>=0.45.1",
  "pygfx>=0.12.0",
  "glfw>=2.9.0",
]

[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[tool.hatch.build.targets.wheel]
packages = [ "src/reefcraft" ]

[tool.ruff]
line-length = 160 # Allow longer source lines than the default 88 chars
exclude = [ "*ipynb", ".venv/**" ]
lint.select = [
  "A",   # flake8-builtins
  "ANN", # flake8-annotations
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # Pyflakes
  "FA",  # flake8-future-annotations
  "I",   # isort
  "PD",  # pandas-vet
  "PTH", # flake8-use-pathlib (PTH)
  "Q",   # flake8-quotes
  "SIM", # flake8-simplify
  "TC",  # flake8-type-checking
  "UP",  # pyupgrade
]
lint.per-file-ignores."!src/**.py" = [
  "D",    # Allow missing docstrings
  "E501", # Allow long lines
  "F401", # Allow unused import
]
lint.pydocstyle.convention = "google" # Support Google-style docstrings

[tool.pyproject-fmt]
keep_full_version = true

[tool.pytest.ini_options]
console_output_style = "count" # Show progress in fraction instead percent
addopts = [
  "--color=yes", # Enable color even in VSCode Testing panel
  "-r a",        # Show extra test summary for failed tests
  "--verbose",   # Show more details to speed up CI/CD debugging
]
testpaths = [
  "tests",  # Directory where your tests are located
]

# Coverage configuration for pytest and coverage tools
[tool.coverage.run]
branch = true  # Enable branch coverage analysis
source = [
  "src/reefcraft",  
]

[tool.coverage.report]
show_missing = true  # Show missing lines in the coverage report
skip_covered = true  # Skip covered files in the report
xml = "coverage.xml"  # Generate XML report for Codecov

[tool.coverage.html]
directory = "coverage_html_report" # Specify the directory for HTML reports

[tool.pyright]
ignore = [ "*ipynb" ]  # Ignore Jupyter notebooks if present
